@@ -4,6 +4,8 @@
 
 	* tagged pre-monitor-module-1
 
+	* Begin work on monitoring modules.
+
 2005-06-08  Albert Chu  <chu11@llnl.gov>
 
 	* Add support for RAW datatype.
